chore(docs): 更新微服务架构说明与.gitignore规则
- 调整微服务核心数量描述，增加数据库管理与生物模板管理服务
- 细化各微服务功能定位及端口分配规范说明
- 优化边缘计算架构及生物识别应用描述
- 扩充.gitignore，新增多项临时和分析文件忽略条目
- 规范Windows保留名称文件忽略，防止Git操作异常